# mFAST

./: CMakeLists.txt
examples/hello_world/: hello_world.cpp
python/: CMakeLists.txt  _core.cpp
